# Ayo

./: .gitignore  README.md
configs/: backend.example.yaml
package/SQL/: create_EntityGroup_table.sql  create_EntityObj_table.sql  create_Tag_table.sql  create_Users_table.sql
package/backend/: Cargo.toml
package/backend/src/: config.rs  main.rs
package/backend/src/modules/: id.rs  mod.rs
package/backend/src/modules/api/: response.rs
package/backend/src/modules/auth/: guard.rs  mod.rs  token.rs
package/backend/src/modules/database/: init.rs  mod.rs  postgres.rs  redis.rs
package/backend/src/modules/file_system/: mod.rs
package/backend/src/modules/file_system/bind/: create.rs  delete.rs  mod.rs  structures.rs
package/backend/src/modules/file_system/dir/: create.rs  delete.rs  mod.rs  read.rs  structures.rs  update.rs
package/backend/src/modules/file_system/file/: create.rs  delete.rs  exists.rs  mod.rs  read.rs  structures.rs  update.rs
package/backend/src/modules/user/: create.rs  delete.rs  mod.rs  read.rs  structures.rs
package/backend/src/server/: init.rs  mod.rs  router.rs
package/backend/src/server/api/: auth.rs  mod.rs  router.rs  search.rs  user.rs
package/backend/src/server/api/fs/: handler.rs  mod.rs  router.rs
