[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }

serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.89"
serde_derive = "1.0.193"

# database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# 試験的に追加しているクレート
once_cell = "1.3.1"

