[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }

serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.89"
serde_derive = "1.0.193"

chrono = "0.4"
rand = "0.8.5"

# database
redis = "0.25.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# 正規表現
radix_fmt = "1.0.0"
regex = "0.1"

# 試験的に追加しているクレート
once_cell = "1.3.1"
sha2 = "0.10.8"
base64 = "0.22.0"

