[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
futures = "0.3"
tokio = { version = "1.34.0", features = ["full"] }
hyper = "1.0.1"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs","cors"] }
http = "1.1.0"

serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.89"
serde_derive = "1.0.193"

chrono = "0.4"
rand = "0.8.5"

# database
redis = "0.25.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# 正規表現
radix_fmt = "1.0.0"
regex = "0.1"

# 試験的に追加しているクレート
once_cell = "1.3.1"
sha2 = "0.10.8"
base64 = "0.22.0"
anyhow = "1.0.86"
